--- a/project2/code/Benchmark/Makefile
+++ b/project2/code/Benchmark/Makefile
@@ -1,15 +1,15 @@
 CC = gcc
-CFLAGS = -g -w
+CFLAGS = -g -w -lrt
 
 all:: parallelCal vectorMultiply externalCal
 
-parallelCal: 
+parallelCal:
 	$(CC) $(CFLAGS) -pthread -o parallelCal parallelCal.c -L../ -lmy_pthread
 
-vectorMultiply: 
+vectorMultiply:
 	$(CC) $(CFLAGS) -pthread -o vectorMultiply vectorMultiply.c -L../ -lmy_pthread
 
-externalCal: 
+externalCal:
 	$(CC) $(CFLAGS) -pthread -o externalCal externalCal.c -L../ -lmy_pthread
 
 clean:
