--- a/project3/code/Makefile
+++ b/project3/code/Makefile
@@ -1,5 +1,5 @@
 CC = gcc
-CFLAGS = -g -c -m32
+CFLAGS = -g -c -m32 -lm
 # CFLAGS += $(shell $(CC) -fno-stack-protector -E -x c /dev/null >/dev/null 2>&1 && echo -fno-stack-protector)
 # ASFLAGS = -m32 -gdwarf-2 -Wa,-divide
 AR = ar -rc
