--- a/project3/code/benchmark/Makefile
+++ b/project3/code/benchmark/Makefile
@@ -1,7 +1,7 @@
 all: test
 
 test:
-	gcc test.c -L../ -lmy_vm -m32 -lm -std=c99 -o test
+	gcc test.c -L../ -lmy_vm -lpthread -m32 -lm -std=c99 -o test
 
 clean:
 	rm -rf test
