--- a/project4/code/Makefile
+++ b/project4/code/Makefile
@@ -1,6 +1,6 @@
 CC=gcc
 CFLAGS=-g -Wall -D_FILE_OFFSET_BITS=64
-LDFLAGS=-lfuse
+LDFLAGS=-lfuse -lm
 
 OBJ=tfs.o block.o
 
@@ -13,4 +13,3 @@ tfs: $(OBJ)
 .PHONY: clean
 clean:
 	rm -f *.o tfs
-
